--- a/Objects/lab2.build_log.htm
+++ b/Objects/lab2.build_log.htm
@@ -30,10 +30,16 @@ Build target 'Target 1'
 compiling main.c...
 main.c(35): warning:  #1166-D: returning pointer to local variable
       return base2return;
-main.c: 1 warning, 0 errors
+main.c(46): warning:  #513-D: a value of type "int" cannot be assigned to an entity of type "unsigned int *"
+      p_input = 0x3042FD71;
+main.c(46): warning:  #152-D: conversion of nonzero integer to pointer
+      p_input = 0x3042FD71;
+main.c(45): warning:  #550-D: variable "p_input"  was set but never used
+      unsigned int *p_input;
+main.c: 4 warnings, 0 errors
 linking...
-Program Size: Code=676 RO-data=236 RW-data=32 ZI-data=8320  
-".\Objects\lab2.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=764 RO-data=236 RW-data=32 ZI-data=8320  
+".\Objects\lab2.axf" - 0 Error(s), 4 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -64,7 +70,7 @@ Package Vendor: Keil
       Include file:  Device\Include\LPC17xx.h
       Source file:   Device\Source\ARM\startup_LPC17xx.s
       Source file:   Device\Source\system_LPC17xx.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
